<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".feature.vistaInicioJuego.VistaMenuCompletoFragment">

    <LinearLayout
        android:id="@+id/linlay_contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/respuestas_design"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_JuegoLocal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_botones_juego_design"
            android:text="@string/boton_JuegoLocal"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_JuegoMultijugador"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_botones_juego_design"
            android:text="@string/boton_JuegoMultijugador"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_Ajustes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_botones_juego_design"
            android:text="@string/boton_Ajustes"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_Salir"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_botones_juego_design"
            android:text="@string/boton_Salir"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_logoApp"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/banner_quickz" />

</FrameLayout>