<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.vistaPreguntaFinal.VistaPregFinalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="350dp"
            android:layout_height="160dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/respuestas_design"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

            <TextView
                android:id="@+id/tv_modoJuego"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="@string/modoJuegoFinal"
                android:textAlignment="gravity"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_mostrarDatos"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="25dp"
                android:gravity="center|top"
                android:text="@string/tvPreg"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_respuestas_layout"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/respuestas_design"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/btnRespuesta1"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/btnResp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRespuesta2"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/btnResp1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRespuesta3"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/btnResp2"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRespuesta4"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/btnResp3"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/banner_quickz"
            android:contentDescription="@string/btnResp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>