<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.vistaRepaso.VistaRepasoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="346dp"
            android:layout_height="128dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/respuestas_design"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

            <TextView
                android:id="@+id/tv_modoJuego"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="@string/ahorcado"
                android:textAlignment="gravity"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_mostrarDatos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:gravity="center|top"
                android:text="@string/tvPreg"
                android:textColor="@color/dark_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_respuestas_layout"
            android:layout_width="346dp"
            android:layout_height="450dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/respuestas_design"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/iv_ahorcado"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:src="@drawable/horca_base" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLetras"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp" >

            </androidx.gridlayout.widget.GridLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/banner_quickz"
            android:contentDescription="@string/btnResp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>