<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.vistaTablero.VistaTableroFragment">

    <!-- LinearLayout con orientación vertical -->
    <LinearLayout
        android:id="@+id/linlay_contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <!-- gridTablero -->

        <LinearLayout
            android:id="@+id/linlay_toolbar"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            android:background="@drawable/respuestas_design">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridTablero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp" >

            </androidx.gridlayout.widget.GridLayout>

            <ImageView
                android:id="@+id/iv_logoTablero"
                android:layout_width="310dp"
                android:layout_height="250dp"
                android:src="@drawable/quickz_icon_triangle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gridControles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@drawable/respuestas_design">


            <Button
                android:id="@+id/btn_BorrarPartida"
                android:layout_width="92dp"
                android:layout_height="49dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/borrar_partida"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/btn_LanzarDado"
                app:layout_constraintEnd_toEndOf="@+id/linLay_juegosCompletados"
                app:layout_constraintStart_toStartOf="@+id/linLay_juegosCompletados"
                app:layout_constraintTop_toBottomOf="@+id/linLay_juegosCompletados" />

            <Button
                android:id="@+id/btn_CargarPartida"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/guardar_partida"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/btn_BorrarPartida"
                app:layout_constraintStart_toEndOf="@+id/btn_BorrarPartida"
                app:layout_constraintTop_toTopOf="@+id/btn_BorrarPartida" />

            <Button
                android:id="@+id/btn_GuardarPartida"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/guardar_partida"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/btn_BorrarPartida"
                app:layout_constraintEnd_toStartOf="@+id/btn_BorrarPartida"
                app:layout_constraintTop_toTopOf="@+id/btn_BorrarPartida" />

            <Button
                android:id="@+id/btn_LanzarDado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_botones_juego_design"
                android:text="@string/boton_LanzarDado"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_UsuarioActivo"
                android:layout_width="191dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/respuestas_design"
                android:gravity="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_person_24"
                app:layout_constraintBottom_toBottomOf="@+id/txt_UsuarioActivo"
                app:layout_constraintStart_toEndOf="@+id/txt_UsuarioActivo"
                app:layout_constraintTop_toTopOf="@+id/txt_UsuarioActivo" />

            <LinearLayout
                android:id="@+id/linLay_juegosCompletados"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_UsuarioActivo">

                <TextView
                    android:id="@+id/txt_PuntosUsuario"
                    android:layout_width="124dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/respuestas_design"
                    android:gravity="center"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imagen_dado"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/dado_uno" />

                <androidx.gridlayout.widget.GridLayout
                    android:id="@+id/gridBotonesJuegos"
                    android:layout_width="110dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnJuego1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/respuestas_design"
                        android:text="1"
                        app:layout_column="0"
                        app:layout_row="0" />

                    <Button
                        android:id="@+id/btnJuego2"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/respuestas_design"
                        android:text="2"
                        app:layout_column="1"
                        app:layout_row="0" />

                    <Button
                        android:id="@+id/btnJuego3"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/respuestas_design"
                        android:text="3"
                        app:layout_column="0"
                        app:layout_row="1" />

                    <Button
                        android:id="@+id/btnJuego4"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/respuestas_design"
                        android:text="4"
                        app:layout_column="1"
                        app:layout_row="1" />
                </androidx.gridlayout.widget.GridLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>